<resources>
    <string name="app_name">E-Ticketing Banyuwangi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="web">tax.banyuwangikab.go.id</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="jumlah_pengunjung">Jumlah Pengunjung</string>
    <string name="jumlah_pendapatan_tiket">Jumlah Pendapatan Tiket</string>
    <string name="jumlah_pendapatan_parkir">Jumlah Pendapatan Parkir</string>
    <string name="total">Total</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="jenis_kendaraan">Jenis Kendaraan</string>
    <string name="jenis_tiket">Jenis Tiket</string>
    <string name="parkir">Parkir</string>
    <string name="tiket">Tiket</string>
    <string name="rodaDua">Roda Dua</string>
    <string name="bus">Bus</string>
    <string name="refresh">Refresh</string>
    <string name="rodaEmpat">Roda Empat</string>
    <string name="jumlah_kendaraan">Jumlah Kendaraan</string>
    <string name="jumlah_orang">Jumlah Orang</string>
    <string name="logout">Keluar</string>
    <string name="home">Beranda</string>
    <string name="riwayat">Riwayat</string>

    <string name="total_biaya">Total Biaya</string>

    <string name="print">Print</string>

    <string name="bluetooth">Bluetooth</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_online">Tiket Online</string>
    <string name="tab_title_harian">Harian</string>


    <string name="tab_title_bulanan">Bulanan</string>

    <string name="pilih_hari">Pilih Hari</string>
    <string name="laporan">Laporan</string>
    <string name="pajak">Pajak</string>
    <string name="pilih_bulan">Pilih Bulan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manca">Mancanegara</string>
    <string name="Domestik">Domestik</string>

    <string name="next">next</string>

    <string-array name="country_name">
        <item>Domestik</item>
        <item>Manca</item>
        <item>Weekend</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="jenisKendaraan">
        <item>Roda dua</item>
        <item>Roda empat</item>
        <item>Bus</item>
        <item>Jalan kaki</item>
    </string-array>

    <string-array name="tiket">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string-array name="kendaraan">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string name="footer">Footer</string>
    <string name="namaWisata">Nama Wisata</string>
    <string name="tiketWeekend">Tiket Weekend</string>

    <string name="prompt_pilih_tanggal">Pilih Tanggal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
