<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tourtle.ticketing2.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:text="@string/jumlah_orang"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/sp_jmlOrang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/tiket"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:prompt="@string/jumlah_orang" />

    <TextView
        android:text="@string/jenis_tiket"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sp_jenisTiket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:text="@string/jenis_kendaraan"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sp_jenisKendaraan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/jumlah_kendaraan"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/sp_jmlKendaraan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/kendaraan"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:prompt="@string/jumlah_kendaraan" />

    <Button
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <androidx.recyclerview.widget.RecyclerView
        android:orientation="vertical"
        android:id="@+id/rv_tiket"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
